--- a/arch/x86/configs/kensur_defconfig
+++ b/arch/x86/configs/kensur_defconfig
@@ -676,6 +676,7 @@ CONFIG_BT_6LOWPAN=m
 CONFIG_BT_LEDS=y
 CONFIG_BT_MSFTEXT=y
 CONFIG_BT_AOSPEXT=y
+# CONFIG_BT_DEBUGFS is not set
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTUSB_AUTOSUSPEND=y
 CONFIG_BT_HCIBTUSB_MTK=y
@@ -1496,13 +1497,13 @@ CONFIG_ATH6KL_USB=m
 CONFIG_ATH6KL_DEBUG=y
 CONFIG_AR5523=m
 CONFIG_WIL6210=m
+# CONFIG_WIL6210_DEBUGFS is not set
 CONFIG_ATH10K=m
 CONFIG_ATH10K_PCI=m
 CONFIG_ATH10K_SDIO=m
 CONFIG_ATH10K_USB=m
 CONFIG_ATH10K_DEBUG=y
 CONFIG_WCN36XX=m
-CONFIG_WCN36XX_DEBUGFS=y
 CONFIG_ATH11K=m
 CONFIG_ATH11K_AHB=m
 CONFIG_ATH11K_PCI=m
@@ -1614,12 +1615,11 @@ CONFIG_RTW88_8822CE=m
 CONFIG_RTW88_8723DE=m
 CONFIG_RTW88_8821CE=m
 CONFIG_RTW88_DEBUG=y
-CONFIG_RTW88_DEBUGFS=y
 CONFIG_RTW89=m
 CONFIG_RTW89_8852AE=m
 CONFIG_RTW89_DEBUGMSG=y
-CONFIG_RTW89_DEBUGFS=y
 CONFIG_RSI_91X=m
+# CONFIG_RSI_DEBUGFS is not set
 CONFIG_CW1200=m
 CONFIG_CW1200_WLAN_SDIO=m
 CONFIG_CW1200_WLAN_SPI=m
@@ -1647,6 +1647,7 @@ CONFIG_IEEE802154_CA8210=m
 CONFIG_IEEE802154_MCR20A=m
 CONFIG_IEEE802154_HWSIM=m
 CONFIG_WWAN=y
+# CONFIG_WWAN_DEBUGFS is not set
 CONFIG_WWAN_HWSIM=m
 CONFIG_MHI_WWAN_CTRL=m
 CONFIG_MHI_WWAN_MBIM=m
@@ -1700,7 +1701,6 @@ CONFIG_KEYBOARD_IQS62X=m
 CONFIG_KEYBOARD_TM2_TOUCHKEY=m
 CONFIG_KEYBOARD_TWL4030=m
 CONFIG_KEYBOARD_XTKBD=m
-CONFIG_KEYBOARD_CROS_EC=m
 CONFIG_KEYBOARD_MTK_PMIC=m
 CONFIG_KEYBOARD_CYPRESS_SF=m
 CONFIG_MOUSE_PS2=m
@@ -2280,9 +2280,7 @@ CONFIG_BATTERY_GAUGE_LTC2941=m
 CONFIG_BATTERY_GOLDFISH=m
 CONFIG_BATTERY_RT5033=m
 CONFIG_CHARGER_RT9455=m
-CONFIG_CHARGER_CROS_USBPD=m
 CONFIG_CHARGER_BD99954=m
-CONFIG_CHARGER_WILCO=m
 CONFIG_BATTERY_SURFACE=m
 CONFIG_CHARGER_SURFACE=m
 CONFIG_BATTERY_UG3105=m
@@ -2830,7 +2828,6 @@ CONFIG_RC_XBOX_DVD=m
 CONFIG_MEDIA_CEC_RC=y
 CONFIG_MEDIA_CEC_SUPPORT=y
 CONFIG_CEC_CH7322=m
-CONFIG_CEC_CROS_EC=m
 CONFIG_CEC_GPIO=m
 CONFIG_CEC_SECO=m
 CONFIG_CEC_SECO_RC=y
@@ -3372,7 +3369,6 @@ CONFIG_SND_SOC_AMD_ACP=m
 CONFIG_SND_SOC_AMD_CZ_DA7219MX98357_MACH=m
 CONFIG_SND_SOC_AMD_CZ_RT5645_MACH=m
 CONFIG_SND_SOC_AMD_ACP3x=m
-CONFIG_SND_SOC_AMD_RV_RT5682_MACH=m
 CONFIG_SND_SOC_AMD_RENOIR=m
 CONFIG_SND_SOC_AMD_RENOIR_MACH=m
 CONFIG_SND_SOC_AMD_ACP5x=m
@@ -3642,7 +3638,6 @@ CONFIG_HID_GFRM=m
 CONFIG_HID_GLORIOUS=m
 CONFIG_HID_HOLTEK=m
 CONFIG_HOLTEK_FF=y
-CONFIG_HID_GOOGLE_HAMMER=m
 CONFIG_HID_VIVALDI=m
 CONFIG_HID_GT683R=m
 CONFIG_HID_KEYTOUCH=m
@@ -4199,7 +4194,6 @@ CONFIG_RTC_DRV_V3020=m
 CONFIG_RTC_DRV_WM831X=m
 CONFIG_RTC_DRV_WM8350=m
 CONFIG_RTC_DRV_PCF50633=m
-CONFIG_RTC_DRV_CROS_EC=m
 CONFIG_RTC_DRV_FTRTC010=m
 CONFIG_RTC_DRV_PCAP=m
 CONFIG_RTC_DRV_MC13XXX=m
@@ -4403,21 +4397,6 @@ CONFIG_INTEL_SCU_PCI=y
 CONFIG_INTEL_SCU_PLATFORM=m
 CONFIG_INTEL_SCU_IPC_UTIL=m
 CONFIG_SIEMENS_SIMATIC_IPC=m
-CONFIG_CHROME_PLATFORMS=y
-CONFIG_CHROMEOS_LAPTOP=m
-CONFIG_CHROMEOS_PSTORE=m
-CONFIG_CHROMEOS_TBMC=m
-CONFIG_CROS_EC=m
-CONFIG_CROS_EC_I2C=m
-CONFIG_CROS_EC_ISHTP=m
-CONFIG_CROS_EC_SPI=m
-CONFIG_CROS_EC_LPC=m
-CONFIG_CROS_KBD_LED_BACKLIGHT=m
-CONFIG_CHROMEOS_PRIVACY_SCREEN=m
-CONFIG_WILCO_EC=m
-CONFIG_WILCO_EC_DEBUGFS=m
-CONFIG_WILCO_EC_EVENTS=m
-CONFIG_WILCO_EC_TELEMETRY=m
 CONFIG_MELLANOX_PLATFORM=y
 CONFIG_MLXREG_HOTPLUG=m
 CONFIG_MLXREG_IO=m
@@ -4486,7 +4465,6 @@ CONFIG_EXTCON_PTN5150=m
 CONFIG_EXTCON_RT8973A=m
 CONFIG_EXTCON_SM5502=m
 CONFIG_EXTCON_USB_GPIO=m
-CONFIG_EXTCON_USBC_CROS_EC=m
 CONFIG_EXTCON_USBC_TUSB320=m
 CONFIG_MEMORY=y
 CONFIG_FPGA_DFL_EMIF=m
@@ -4516,7 +4494,6 @@ CONFIG_DMARD10=m
 CONFIG_FXLS8962AF_I2C=m
 CONFIG_FXLS8962AF_SPI=m
 CONFIG_HID_SENSOR_ACCEL_3D=m
-CONFIG_IIO_CROS_EC_ACCEL_LEGACY=m
 CONFIG_KXSD9=m
 CONFIG_KXCJK1013=m
 CONFIG_MC3230=m
@@ -4621,9 +4598,6 @@ CONFIG_SPS30_I2C=m
 CONFIG_SPS30_SERIAL=m
 CONFIG_SENSEAIR_SUNRISE_CO2=m
 CONFIG_VZ89X=m
-CONFIG_IIO_CROS_EC_SENSORS_CORE=m
-CONFIG_IIO_CROS_EC_SENSORS=m
-CONFIG_IIO_CROS_EC_SENSORS_LID_ANGLE=m
 CONFIG_IIO_SSP_SENSORS_COMMONS=m
 CONFIG_IIO_SSP_SENSORHUB=m
 CONFIG_AD3552R=m
@@ -4724,7 +4698,6 @@ CONFIG_CM32181=m
 CONFIG_CM3232=m
 CONFIG_CM3323=m
 CONFIG_CM36651=m
-CONFIG_IIO_CROS_EC_LIGHT_PROX=m
 CONFIG_GP2AP002=m
 CONFIG_GP2AP020A00F=m
 CONFIG_IQS621_ALS=m
@@ -4794,7 +4767,6 @@ CONFIG_TPL0102=m
 CONFIG_LMP91000=m
 CONFIG_ABP060MG=m
 CONFIG_BMP280=m
-CONFIG_IIO_CROS_EC_BARO=m
 CONFIG_DLHL60D=m
 CONFIG_DPS310=m
 CONFIG_HID_SENSOR_PRESS=m
@@ -4812,7 +4784,6 @@ CONFIG_T5403=m
 CONFIG_HP206C=m
 CONFIG_ZPA2326=m
 CONFIG_AS3935=m
-CONFIG_CROS_EC_MKBP_PROXIMITY=m
 CONFIG_ISL29501=m
 CONFIG_LIDAR_LITE_V2=m
 CONFIG_MB1232=m
@@ -4851,7 +4822,6 @@ CONFIG_NTB_SWITCHTEC=m
 CONFIG_NTB_TRANSPORT=m
 CONFIG_PWM=y
 CONFIG_PWM_CRC=y
-CONFIG_PWM_CROS_EC=m
 CONFIG_PWM_DWC=m
 CONFIG_PWM_IQS620A=m
 CONFIG_PWM_LP3943=m
@@ -5202,7 +5172,6 @@ CONFIG_CRYPTO_DEV_PADLOCK_SHA=m
 CONFIG_CRYPTO_DEV_ATMEL_ECC=m
 CONFIG_CRYPTO_DEV_ATMEL_SHA204A=m
 CONFIG_CRYPTO_DEV_CCP=y
-CONFIG_CRYPTO_DEV_CCP_DEBUGFS=y
 CONFIG_CRYPTO_DEV_QAT_DH895xCC=m
 CONFIG_CRYPTO_DEV_QAT_C3XXX=m
 CONFIG_CRYPTO_DEV_QAT_C62X=m
@@ -5232,6 +5201,7 @@ CONFIG_CONSOLE_LOGLEVEL_QUIET=1
 CONFIG_STRIP_ASM_SYMS=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x0
+CONFIG_DEBUG_FS=y
 CONFIG_STACKTRACE=y
 CONFIG_RCU_CPU_STALL_TIMEOUT=60
 CONFIG_IO_STRICT_DEVMEM=y
